Fix alignment issue in Firefox

--- a/site/main.css
+++ b/site/main.css
@@ -86,6 +86,7 @@
 
 :root {
   font-size: 16px;
+  line-height: 1;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -284,6 +285,7 @@ label {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  align-items: center;
 }
 
 input[type="text"],
